Fix dark mode typing indicator on macOS Mojave (#606)
Closes #604

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -699,3 +699,6 @@ html.dark-mode .__6l {
 	color: var(--base-seventy);
 	background: var(--container-color);
 }
+html.dark-mode ._4gd0 {
+	background: transparent;
+}
